--- a/dien-tich-chu-vi-tron.html
+++ b/dien-tich-chu-vi-tron.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>tính diện tích hình tròn</title>
+    <title>tính diện tích & chu vi hình tròn</title>
 </head>
 <body>
 <label for="r">Nhập bán kính hình tròn: </label>
@@ -15,7 +15,8 @@
         if (r < 0){
             document.getElementById("chu-vi").innerText = "Không được nhỏ hơn 0";
         }else {
-            document.getElementById("chu-vi").innerText = "" + (r*2)*3.14;
+            document.getElementById("chu-vi").innerText = "" + (<r></r>
+            <r></r>)*3.14;
         }
     }
 </script>
